--- a/graduationapp/src/Components/Forms/Forms.css
+++ b/graduationapp/src/Components/Forms/Forms.css
@@ -1,11 +1,14 @@
 
-.Name-form {
+.Name-Form,
+.Email-Form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-size: 20px;
+    
   
     
 }
@@ -18,6 +21,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     color: #534D56;
+    font-size: 20px;
 
 }
 
@@ -32,37 +36,7 @@
     
 }
 
-.Name-Input {
-    width: 50%;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #153554;
-    padding: 10px;
-    font-size: 1.2rem;
-    font-family: 'Roboto', sans-serif;
-    color: #534D56;
-}
 
-.Email-Input {
-    width: 50%;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #153554;
-    padding: 10px;
-    font-size: 1.2rem;
-    font-family: 'Roboto', sans-serif;
-    color: #534D56;
-}
-
-.Email-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    
-}
 
 .Email {
     display: flex;
@@ -75,16 +49,22 @@
     
 }
 
-.Email-Input {
-    width: 50%;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: 1px solid #153554;
-    padding: 10px;
-    font-size: 1.2rem;
-    font-family: 'Roboto', sans-serif;
-    color: #534D56;
+
+.Name-Form .Name-Input,
+.Email-Form .Email-Input {
+  width: 50%;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  border: 1px solid #FFBA08;
+  background-color: #FFBA08;
+  padding: 10px;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  color: #F7F7F5;
 }
 
-
+.Name-Form .Name-Input::placeholder,
+.Email-Form .Email-Input::placeholder {
+  color: #F7F7F5; /* Set the text color for the placeholders */
+}
 
