--- a/graduationapp/src/Components/Cards/Cards.css
+++ b/graduationapp/src/Components/Cards/Cards.css
@@ -1,13 +1,21 @@
-
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #F7F7F5;
     border-radius: 20px;
     border: solid 10px;
     border-color: #FFBA08;
-    display: inline-block;
+    /* display: inline-block; */
     height: 600px;
     margin: 1rem;
     position: relative;
     width: 600px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.card-text{
+    margin-left: 2em;
+    margin-right: 2em;
 }
