--- a/graduationapp/src/Components/Cards/Cards.css
+++ b/graduationapp/src/Components/Cards/Cards.css
@@ -1,9 +1,10 @@
 
 .card {
-    background-color: #F7F7F5;
+    background-color: #05A6F0;
+    opacity: 0.8;
     border-radius: 20px;
     border: solid 10px;
-    border-color: #FFBA08;
+    border-color: #F7F7F5;
     display: inline-block;
     height: 600px;
     margin: 1rem;
