--- a/graduationapp/src/Components/Cards/Cards.css
+++ b/graduationapp/src/Components/Cards/Cards.css
@@ -16,4 +16,22 @@
 .card-text{
     margin-left: 4.7em;
     margin-right: 4.7em;
-}
+}  
+  /* iPhone 12 and 12 Pro */
+  @media only screen 
+    and (min-device-width: 390px) 
+    and (max-device-width: 844px)
+    and (-webkit-min-device-pixel-ratio: 3) {
+  
+    .card {
+      width: 85%;
+      height: auto; 
+      margin: 1rem auto;
+    }
+    
+    /* .card-text {
+      margin-left: 1rem;
+      margin-right: 1rem;
+    } */
+  
+  }    
