--- a/graduationapp/src/Components/Forms/Forms.css
+++ b/graduationapp/src/Components/Forms/Forms.css
@@ -1,4 +1,9 @@
-
+/* iPhone 12
+@media (max-width: 390px) { 
+  * {
+    width: 140px;
+  }
+} */
 .Name-Form,
 .Email-Form {
     display: flex;
@@ -7,9 +12,6 @@
     align-items: center;
     padding: 10px;
     font-size: 20px;
-    
-  
-    
 }
 
 
@@ -23,7 +25,6 @@
     color: #F7F7F5;
     font-size: 17px;
     text-align: center;
-
 }
 
 .Form-Title {
@@ -38,7 +39,6 @@
     margin-top: 20px;
     margin-bottom: 20px;
     color: #F7F7F5;
-    
 }
 
 
@@ -50,8 +50,7 @@
     align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
-    color: #F7F7F5;
-    
+    color: #F7F7F5;  
 }
 
 
@@ -81,3 +80,4 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
