End screen and Goose Squad logo added. We are DONE! If we excuse the media queries, but the app works. WooHoo!

--- a/graduationapp/src/Components/Forms/Forms.css
+++ b/graduationapp/src/Components/Forms/Forms.css
@@ -13,6 +13,7 @@
 }
 
 
+
 .Body {
     display: flex;
     flex-direction: column;
@@ -81,3 +82,19 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.GooseSquad {
+
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 300px;
+  width: 350px;
+
+}
+
+
+
+
+
